--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "query-string": "^6.10.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
@@ -150,6 +152,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-loadable": "^5.5.3",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-immutable": "^4.0.1",
