--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^6.6.0",
+    "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
@@ -157,6 +157,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-immutable": "^4.0.1",
     "babel-plugin-import": "^1.13.0",
+    "eslint-config-alloy": "^3.5.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0"
   }
